// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backtick.md 1`] = `
\`\` \`123\` \`\`

\`\`12\`34\`\`

\`\` \`12\`\`

\`\`34\` \`\`

\`\` \`\`\`123\`\`\` \`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\` \`123\` \`\`

\`\` 12\`34 \`\`

\`\` \`12 \`\`

\`\` 34\` \`\`

\` \`\`\`123\`\`\` \`

`;

exports[`escape.md 1`] = `
\`1*2*3\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`1*2*3\`

`;

exports[`simple.md 1`] = `
\`123\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`123\`

`;
